# MARC-PRJ

./: .gitignore  CMakeLists.txt  README.md  loc.h  main.c  map.c  map.h  moves.c  moves.h  node.c  node.h  slope.c  slope.h  stack.c  stack.h  testunit.c  testunit.h  tree.c  tree.h  utils.c  utils.h
complexity/: timer.c  timer.h  times.md
maps/: corridor.map  example1.map.slope  maps.md  mars.map  mars.map.slope  onlyreg.map  training.map  training.map.slope
